Modification structure swagger (#24)
