# backend/swagger-output.json
@@ -1540,117 +1540,3 @@
       }
     }
   },
-  "components": {
-    "securitySchemes": {
-      "bearerAuth": {
-        "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
-      }
-    },
-    "schemas": {
-      "Mineur": {
-        "type": "object",
-        "properties": {
-          "email": {
-            "type": "string",
-            "example": "email@exemple.com"
-          },
-          "nom": {
-            "type": "string",
-            "example": "Joe Dassin"
-          },
-          "motdepasse": {
-            "type": "string",
-            "example": "motdepasse123"
-          },
-          "niveau": {
-            "type": "number",
-            "example": 1
-          }
-        },
-        "required": ["email", "nom", "motdepasse", "niveau"],
-        "xml": {
-          "name": "Mineur"
-        }
-      },
-      "Planete": {
-        "type": "object",
-        "properties": {
-          "nom": {
-            "type": "string",
-            "example": "Terre"
-          },
-          "image": {
-            "type": "string",
-            "example": "https://picsum.photos/200"
-          }
-        },
-        "required": ["nom", "image"],
-        "xml": {
-          "name": "Planete"
-        }
-      },
-      "Contrat": {
-        "type": "object",
-        "properties": {
-          "prime": {
-            "type": "number",
-            "example": 100
-          },
-          "danger": {
-            "type": "number",
-            "example": 1
-          },
-          "ressource": {
-            "type": "string",
-            "example": "fer"
-          },
-          "quantiteRessource": {
-            "type": "number",
-            "example": 100
-          },
-          "dateExpiration": {
-            "type": "string",
-            "example": "2022-01-01"
-          }
-        },
-        "required": [
-          "prime",
-          "danger",
-          "ressource",
-          "quantiteRessource",
-          "dateExpiration"
-        ],
-        "xml": {
-          "name": "Contrat"
-        }
-      },
-      "Reservation": {
-        "type": "object",
-        "properties": {
-          "mineurId": {
-            "xml": {
-              "name": "mineur"
-            },
-            "$ref": "#/components/schemas/Mineur"
-          },
-          "planeteId": {
-            "xml": {
-              "name": "planete"
-            },
-            "$ref": "#/components/schemas/Planete"
-          },
-          "estTermine": {
-            "type": "boolean",
-            "example": false
-          }
-        },
-        "required": ["mineurId", "planeteId", "estTermine"],
-        "xml": {
-          "name": "Reservation"
-        }
-      }
-    }
-  }
-}
